# filecontent

./: CHANGELOG.md  LICENSE  README.md  setup.cfg
filecontent/: cli.py  content.py  extractor.py  extractors.py  fetcher.py  http_handler.py  mime.py  sha512.py  test_all.py
filecontent/extractors/: tar.py  zip.py
filecontent/handlers/: file.py  http.py
samples/: tox.ini.tar.bz2  tox.ini.tar.xz
