[metadata]
name = filecontent
version = attr: filecontent.__version__
description = Report files opened while executing a command
author = João Pinto
author_email = joao.pinto@vshn.ch
url = https://github.com/joaompinto/filecontent
license = BSD-3

[options]
zip_safe = False
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = filecontent/_version.py
versionfile_build = filecontent/_version.py
tag_prefix =
parentdir_prefix = filecontent-

[options.entry_points]
console_scripts =
    filecontent = filecontent.__main__:main
